# pysim

./: .gitignore  README.md  pyproject.toml
docs/: examples.ipynb
models/: knee_jerk_v1.slx
pysim/: __init__.py  pysim.py
pysim/models/: knee_jerk_v1.slx
src/: pysim.py
src/slprj/sim/varcache/knee_jerk_v1/: checksumOfCache.mat  varInfo.mat
src/slprj/sim/varcache/knee_jerk_v1/tmwinternal/: simulink_cache.xml
